--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       background: #474747;
       display: flex;
       width: 100%;
+      height: 80px; /* Double the height */
     }
 
     .tab-btn {
@@ -40,10 +41,17 @@
       border: none;
       outline: none;
       cursor: pointer;
-      padding: 10px 16px;
-      font-size: 10pt;
+      padding: 25px 16px; /* Increased vertical padding */
+      font-size: 14pt; /* Larger text */
       transition: 0.3s;
       border-radius: 8px 8px 0 0;
+      flex: 1; /* Stretch to fill width */
+      text-align: center;
+      color: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 8px;
     }
 
     .tab-btn:hover {
@@ -79,6 +87,7 @@
       box-sizing: border-box;
     }
 
+    /* Edit Form - Improved Readability */
     .form-section {
       flex: 1;
       max-height: 100%;
@@ -87,13 +96,41 @@
       padding: 20px;
       border-radius: 8px;
       box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+      font-size: 14pt; /* Larger font */
+    }
+
+    .form-section label {
+      display: block;
+      margin: 6px 0 3px;
+      font-weight: bold;
+      color: #333;
+    }
+
+    .form-section input[type="text"],
+    .form-section input[type="number"],
+    .form-section textarea,
+    .form-section select {
+      width: 90%; /* Less wide */
+      padding: 6px;
+      margin-top: 2px;
       box-sizing: border-box;
+      font-size: 14pt;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+
+    .form-section button {
+      margin-top: 8px;
+      padding: 6px 12px;
+      cursor: pointer;
+      border: none;
+      border-radius: 4px;
+      font-size: 14pt;
     }
     .receipt-title[data-mode="quotation"] {
       color: #e91e63;
     }
     .receipt-section {
-      flex: 1;
       display: flex;
       justify-content: center;
       align-items: flex-start;
@@ -103,18 +140,19 @@
     }
 
     #receipt {
-      width: 95vw;
+      width: 95vw; /* Full width minus padding */
       max-width: 210mm;
       min-height: 297mm;
       background: white;
       padding: 25.4mm;
       box-shadow: 0 0 10px rgba(0,0,0,0.3);
       box-sizing: border-box;
+      position: relative;
       font-family: Arial, sans-serif;
       font-size: 10pt;
-      position: relative;
       margin: 0 auto;
       transform-origin: top center;
+      transition: transform 0.3s ease;
     }
     .receipt-title[data-mode="quotation"] {
     color: #e91e63;
@@ -138,22 +176,17 @@
       background-color: #fff3cd;
       color: #856404;
     }
-    /* Scale down on tall screens to fit A4 */
-    @media (min-height: 1080px) {
-      .receipt-section {
-        flex: 1;
-      }
+    /* Scale to fit screen height */
+    @media (max-height: 800px) {
       #receipt {
-        transform: scale(0.85);
+        transform: scale(0.8);
       }
     }
-
-    @media (min-height: 1440px) {
+    @media (min-height: 1080px) {
       #receipt {
         transform: scale(1);
       }
     }
-
 
     label {
       display: block;
@@ -1976,18 +2009,17 @@ function renderCatalogue() {
     renderCatalogue();
   }
   function resizeReceipt() {
-  const receipt = document.getElementById("receipt");
-  const receiptSection = document.querySelector(".receipt-section");
-  const containerHeight = receiptSection.clientHeight;
-  const a4HeightInPx = 297 * 3.78; // 297mm × 3.78px/mm ≈ A4 height in pixels
+    const receipt = document.getElementById("receipt");
+    const containerHeight = document.querySelector(".receipt-section").clientHeight;
+    const a4HeightInPx = 297 * 3.78; // ~A4 height in pixels
 
-  if (containerHeight < a4HeightInPx) {
-    const scale = containerHeight / a4HeightInPx;
-    receipt.style.transform = `scale(${Math.max(scale * 0.9, 0.6)})`;
-  } else {
-    receipt.style.transform = "scale(1)";
+    if (containerHeight < a4HeightInPx) {
+      const scale = containerHeight / a4HeightInPx;
+      receipt.style.transform = `scale(${Math.max(scale * 0.9, 0.6)})`;
+    } else {
+      receipt.style.transform = "scale(1)";
+    }
   }
-}
 
 // Call on load and resize
 window.addEventListener("load", resizeReceipt);
