--- a/index.html
+++ b/index.html
@@ -17,12 +17,15 @@
   <meta name="theme-color" content="#4CAF50">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <style>
+    body, .tabs, .tab-btn, .form-section, details, label, input, textarea, select, button {
+      font-size: 20px !important;
+    }
     body {
       font-family: Arial, sans-serif;
       font-size: 10pt;
       margin: 0;
       padding: 20px;
-      background: #f5f5f5;
+      background: #474747;
       color: #333;
     }
 
