--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
     body, .tabs, .tab-btn, .form-section, details, label, input, textarea, select, button {
       font-size: 20px !important;
     }
+    /* Desktop Mode: 14px for everything EXCEPT receipt */
+    @media (min-width: 768px) {
+      body, .tabs, .tab-btn, .form-section, details, label, input, textarea, select, button {
+        font-size: 14px !important;
+      }
+    }
     body {
       font-family: Arial, sans-serif;
       font-size: 10pt;
